--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "www.github.com/arnavpanigrahi/"
+    "url": "www.github.com/quiet69/"
   },
   "keywords": [
     "~"
